--- a/project001/css/style.css
+++ b/project001/css/style.css
@@ -57,6 +57,7 @@ img {
 
 .box23 {
     width: 100%;
+    height: 600px;
 }
 
 
@@ -591,7 +592,7 @@ img {
 
 .plus {
     position: absolute;
-    top: 18px;
+    top: 10px;
     right: 20px;
     width: 15px;
 }
@@ -602,11 +603,12 @@ img {
 
 .time_title {
     width: 80%;
-    margin: 10px;
+    margin: 10px 10px 5px 10px;
     margin-top: 20px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-size: 15px;
 }
 
 .time_txt {
@@ -614,6 +616,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 13px;
 }
 
 .time_txt1 {}
@@ -648,11 +651,12 @@ img {
 
 .fee_title {
     width: 80%;
-    margin: 10px;
+    margin: 10px 10px 5px 10px;
     margin-top: 20px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-size: 15px;
 }
 
 .fee_txt {
@@ -660,6 +664,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 13px;
 }
 
 .fee_txt1 {}
